# Capstone

./: README.md
GUI/: gui.py
axum-testing1/: Cargo.toml  run.bash
axum-testing1/src/: main.rs
axum-testing1/src/analysis/: analyze.rs  indexing.rs  mod.rs
axum-testing1/src/cap/: PacketStruct.rs  capture.rs  mod.rs
axum-testing1/static/html/: analysis.html  capture.hbs  capture.html  capture_template.html  index.html
axum-testing1/static/html/capture/: edit_capture_template.hbs  edit_capture_template.html
net_forecasting/: Cargo.toml
rust-testing/: Cargo.toml
rust-testing/src/: main.rs
rust-testing1/: Cargo.toml
rust-testing1/captures/: tshark2023-10-10-UTC02-43-04.pcap  tshark2023-10-10-UTC03-23-06.pcap  tshark2023-10-28-UTC17-36-09.pcap
rust-testing1/src/: main.rs
rust-testing2/: Cargo.toml
rust-testing2/caps/: 2023-12-24_04-49-23-Capture.txt  2024-03-17_18-22-24-Capture.txt  2024-03-17_18-38-45-Capture.txt
rust-testing2/data/: size1.txt
rust-testing2/src/: anal.rs  analysis.rs  auth.rs  cap.rs  main.rs  ml.rs
sniffer/: sniffer.py  sniffer_uni.py  testing.py
sniffer/attempt1/: Eavesdrop_Data.pcap  Eavesdrop_Data.txt  gui.py
