[package]
name = "axum-testing1"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.7.4"
tokio = { version = "1.36.0", features = ["full"] }
tower = "0.4.13"
tower-http = { version = "0.5.2", features = ["fs"] }
serde = { version = "1.0.197", features = ["derive"] } 
axum-server = "0.6.0"
handlebars = "5.1.2"
pcap = "1.3.0"
pnet = "0.34.0"
chrono = "0.4.31"
rand = "0.8.5"
mongodb = "2.8.2"
futures-util = "0.3.30"
axum-macros = "0.4.1"
